--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "chalk": "^4.1.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "moment": "^2.29.1",
     "pg": "^8.5.1"
   }
 }
