--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,10 +10,10 @@ services:
   database:
     image: postgres:13
     volumes:
-      - ./data:/var/lib/postgresql
+      - ./data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
     environment:
-      - "POSTGRES_USER=pguser"
-      - "POSTGRES_PASSWORD=pguser"
-      - "POSTGRES_DB=main"
+      - POSTGRES_USER=pguser
+      - POSTGRES_PASSWORD=pguser
+      - POSTGRES_DB=coordinates
